ES translation : correction of camping pop up (removing an accent)

--- a/translations/items.es.xlf
+++ b/translations/items.es.xlf
@@ -6403,7 +6403,7 @@ Después de varios largos minutos de búsqueda, terminas por encontrar <strong>u
       </notes>
       <segment>
         <source>Sich verstecken und die Nacht hier schlafen!</source>
-        <target>¡Escónderse y pasar la noche aquí!</target>
+        <target>¡Esconderse y pasar la noche aquí!</target>
       </segment>
     </unit>
     <unit id="VsRU9Va" name="Du hast Dich notdürftig versteckt.">
