ES translation : translation of pop up message when you steal the bank without being seen

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -18606,7 +18606,7 @@
       </notes>
       <segment>
         <source>Dein Diebstahlversuch ist gescheitert! Du bist entdeckt worden!</source>
-        <target>Dein Diebstahlversuch ist gescheitert! Du bist entdeckt worden!</target>
+        <target>¡Tu intento de robo ha fallado! ¡Has sido visto!</target>
       </segment>
     </unit>
     <unit id="xJvvYYd" name="89244b5">
