ES translation log when nightwacher weren't necessary to cover the zombie attack

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -17518,7 +17518,7 @@
       </notes>
       <segment>
         <source>Die Nachtwächter der letzten nacht zeigten unglaublichen Mut, es ist nur schade, dass die Zombies offensichtlich mit etwas anderem beschäftigt waren!</source>
-        <target>Die Nachtwächter der letzten nacht zeigten unglaublichen Mut, es ist nur schade, dass die Zombies offensichtlich mit etwas anderem beschäftigt waren!</target>
+        <target>Los centinelas de esta noche estuvieron más listos que nunca. ¡lástima que los zombies no quisieron participar en la fiesta!</target>
       </segment>
     </unit>
     <unit id="bB1fuj8" name="2294b6d">
