ES translation fix description misprint

--- a/translations/global.es.xlf
+++ b/translations/global.es.xlf
@@ -2161,7 +2161,7 @@
       </notes>
       <segment>
         <source>Spamschutz: Du hast heute bereits eine große Anzahl an Spielern kontaktiert; du musst eine Weile warten, bevor du eine neue Nachricht erstellen kannst.</source>
-        <target>Protección contra correo no deseado: ya tu ha puesto en contacto con un gran número de jugadores hoy; tienes que esperar un poco antes de poder redactar un nuevo mensaje.</target>
+        <target>Protección contra correo no deseado: ya te has puesto en contacto con un gran número de jugadores hoy; tienes que esperar un poco antes de poder redactar un nuevo mensaje.</target>
       </segment>
     </unit>
     <unit id="pOsDbB7" name="Weitere Einträge werden geladen...">
