ES translation: fix first punishment misprint

--- a/translations/game.es.xlf
+++ b/translations/game.es.xlf
@@ -1291,7 +1291,7 @@
       </notes>
       <segment>
         <source>Verbannung</source>
-        <target>Destarrado</target>
+        <target>Desterrado</target>
       </segment>
     </unit>
     <unit id="utVVlIc" name="Todesstrafe">
