--- a/translations/game.en.xlf
+++ b/translations/game.en.xlf
@@ -18252,7 +18252,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Wenn du flüchtest, werden dich die Zombies verletzen, aber du wirst trotzdem entkommen...</source>
-        <target>Wenn du flüchtest, werden dich die Zombies verletzen, aber du wirst trotzdem entkommen...</target>
+        <target>If you flee, you will be wounded by the zombies, but on the other hand, you will be able to leave the zone...</target>
       </segment>
     </unit>
     <unit id="OSOrpL9" name="Du kannst versuchen einen Zombie im Nahkampf und ohne Waffen anzugreifen.">
@@ -18261,7 +18261,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Du kannst versuchen einen Zombie im Nahkampf und ohne Waffen anzugreifen.</source>
-        <target>Du kannst versuchen einen Zombie im Nahkampf und ohne Waffen anzugreifen.</target>
+        <target>You can try to engage a zombie in hand to hand combat to make your escape easier.</target>
       </segment>
     </unit>
     <unit id="H0.Za4t" name="Diese Aktion kostet dich 1 AP und die Erfolgsaussichten sind ziemlich gering.">
@@ -18270,7 +18270,7 @@ Each upgrade brings various advantages (defence, water, special skills...).It's 
       </notes>
       <segment>
         <source>Diese Aktion kostet dich 1 AP und die Erfolgsaussichten sind ziemlich gering.</source>
-        <target>This action costs you 1 AP and the chances of success are pretty low.</target>
+        <target>This action costs 1 AP and has a minimal chance of success.</target>
       </segment>
     </unit>
     <unit id="MIyP62V" name="Dieser Bürger möchte in die Stadt gebracht werden.">
