ES translation : button to create a new town

--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -2896,7 +2896,7 @@
       </notes>
       <segment>
         <source>Stadt anlegen</source>
-        <target>Stadt anlegen</target>
+        <target>Crear un pueblo</target>
       </segment>
     </unit>
     <unit id="yo6CbZw" name="Avatar">
