--- a/translations/admin.es.xlf
+++ b/translations/admin.es.xlf
@@ -1960,7 +1960,7 @@
       </notes>
       <segment>
         <source>Vergeben!</source>
-        <target>¡Perdonar!</target>
+        <target>¡Entregar!</target>
       </segment>
     </unit>
     <unit id="BYzHaeg" name="Aktuelle Städte">
